adding layout structure (wip)

--- a/lib/canon/stylesheets/_settings.scss
+++ b/lib/canon/stylesheets/_settings.scss
@@ -1,3 +1,5 @@
+// Base
+
 $black: #000;
 $grey-darker: #333;
 $grey-dark: #666;
@@ -14,3 +16,8 @@ $blue: #1e6ec1;
 $base-font-family: 'Arial', sans-serif;
 $base-font-size: 13px;
 $base-line-height: 20px;
+
+// Layout
+
+$app-header-height: 97px;
+$app-footer-height: 40px;
