--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
 }
 
-body > .l-wrapper {
+.l-wrapper {
   min-height: 100%;
   height: auto !important;
   height: 100%;
