fixed line-height issue on link text

--- a/lib/canon/stylesheets/patterns/_navbar.scss
+++ b/lib/canon/stylesheets/patterns/_navbar.scss
@@ -44,7 +44,7 @@
 			color: $navbar-link;
 			font-size: 14px;
 			display: inline-block;
-			padding: 9px;
+			padding: 7px 9px;
 			text-decoration: none;
 			text-shadow: 0 1px $white;
 			&:hover {
