--- a/lib/canon/stylesheets/_buttons.scss
+++ b/lib/canon/stylesheets/_buttons.scss
@@ -49,3 +49,31 @@ input::-moz-focus-inner {
     @include box-shadow(none);
   }
 }
+
+.btn-primary {
+  color: $white;
+  background-color: #333;
+  border: 1px solid #333;
+
+  @include background-image(linear-gradient(#666, #333));
+  @include text-shadow(0 -1px 1px rgba(0, 0, 0, 0.4));
+
+  &:hover,
+  &.hover {
+    @include background-image(linear-gradient(#777, #555));
+  }
+
+  &:active,
+  &.active {
+    background: #666;
+
+    @include box-shadow(0 0 4px 0 rgba(0, 0, 0, 0.6) inset);
+  }
+
+  &[disabled],
+  &.disabled {
+    color: #ccc;
+    background: #999;
+    border-color: #666;
+  }
+}
