--- a/lib/canon/stylesheets/_buttons.scss
+++ b/lib/canon/stylesheets/_buttons.scss
@@ -77,3 +77,31 @@ input::-moz-focus-inner {
     border-color: #666;
   }
 }
+
+.btn-login {
+  color: $white;
+  background-color: #a60004;
+  border: 1px solid #a60004;
+
+  @include background-image(linear-gradient(#d81436, #a60004));
+  @include text-shadow(0 -1px 1px rgba(0, 0, 0, 0.4));
+
+  &:hover,
+  &.hover {
+    @include background-image(linear-gradient(#d81436, #c40022));
+  }
+
+  &:active,
+  &.active {
+    background: #d81436;
+
+    @include box-shadow(0 0 4px 0 rgba(0, 0, 0, 0.6) inset);
+  }
+
+  &[disabled],
+  &.disabled {
+    color: rgba(255, 255, 255, 0.6);
+    background: #d81436;
+    border-color: #a60004;
+  }
+}
