use .active class

--- a/lib/canon/stylesheets/patterns/_navbar.scss
+++ b/lib/canon/stylesheets/patterns/_navbar.scss
@@ -30,7 +30,7 @@
 			-moz-border-radius: 5px;
 			-webkit-border-radius: 5px;
 
-			&.is-active {
+			&.active {
 				background-color: $white;
 				border-color: #CCC;
 				font-weight: bold;
