--- a/lib/canon/stylesheets/patterns/_navbar.scss
+++ b/lib/canon/stylesheets/patterns/_navbar.scss
@@ -27,9 +27,7 @@
 			font-weight: bold;
 			line-height: 8px;
 			border: 1px solid transparent;
-			border-radius: 5px;
-			-moz-border-radius: 5px;
-			-webkit-border-radius: 5px;
+			@include border-radius(5px);
 
 			&.active {
 				background-color: $white;
@@ -76,9 +74,7 @@
 			height: 20px;
 			margin-bottom: -20px;
 			background-color: white;
-			border-radius: 2px 2px 0 0;
-			-moz-border-radius: 2px 2px 0 0;
-			-webkit-border-radius: 2px 2px 0 0;
+			@include border-radius(2px 2px 0 0);
 		}
 	}
 
