Move button definitions to patterns directory.

--- a/lib/canon/stylesheets/canon.scss
+++ b/lib/canon/stylesheets/canon.scss
@@ -4,7 +4,7 @@
 @import "settings";
 @import "mixins";
 @import "base";
-@import "buttons";
 @import "layout";
 
+@import "patterns/buttons";
 @import "patterns/navbar";
