--- a/lib/canon/stylesheets/patterns/_forms.scss
+++ b/lib/canon/stylesheets/patterns/_forms.scss
@@ -1,3 +1,16 @@
+fieldset {
+  margin: 0 0 $base-line-height;
+}
+
+legend {
+  display: block;
+  width: 100%;
+  margin: 0 0 $base-line-height;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: $base-line-height * 1.5;
+}
+
 label,
 input[type="text"],
 input[type="password"],
