adjusting padding instead

--- a/lib/canon/stylesheets/patterns/_nav-utility.scss
+++ b/lib/canon/stylesheets/patterns/_nav-utility.scss
@@ -2,7 +2,7 @@
 .nav-utility {
 	height: 39px;
 	font-size: 12px;
-	line-height: 14px;
+
 	.l-content > .nav {
 		margin: 2px 0 0 0;
 		float: right;
@@ -11,7 +11,7 @@
 			position: relative;
 			margin: 0 0 0 10px;
 			& > a {
-				padding: 10px;
+				padding: 7px 10px;
 				color: #999;
 				position: relative;
 				top: 1;
