updating app-header height, adding nav-utility

--- a/lib/canon/stylesheets/_settings.scss
+++ b/lib/canon/stylesheets/_settings.scss
@@ -19,8 +19,9 @@ $base-line-height: 20px;
 
 // Layout
 
-$app-header-height: 99px;
+$app-header-height: 98px;
 $app-footer-height: 40px;
+$app-nav-utility: 40px;
 
 // Patterns
 
