update navbar to nav-primary

--- a/lib/canon/stylesheets/_settings.scss
+++ b/lib/canon/stylesheets/_settings.scss
@@ -25,6 +25,6 @@ $app-nav-utility: 40px;
 
 // Patterns
 
-$navbar-link: #888;
-$navbar-link-hover: $red;
-$navbar-link-active: $grey-darker;
+$nav-primary-link: #888;
+$nav-primary-link-hover: $red;
+$nav-primary-link-active: $grey-darker;
