adding secondary nav markup/css and fixes for the other navs

--- a/lib/canon/stylesheets/canon.scss
+++ b/lib/canon/stylesheets/canon.scss
@@ -9,4 +9,5 @@
 @import "patterns/buttons";
 @import "patterns/forms";
 @import "patterns/nav-primary";
+@import "patterns/nav-secondary";
 @import "patterns/nav-utility";
