--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -2,7 +2,7 @@ body {
   min-width: 1050px; // fixes layout issues when users have to horizontally scroll
 }
 
-html, body { 
+html, body {
   height: 100%;
 }
 
@@ -19,20 +19,13 @@ html, body {
   height: $app-footer-height;
 }
 
-.l-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  background: $grey-darker;
-  height: $app-header-height;
-  overflow: visible;
-  z-index: 10;
-}
 
 .l-body {
- padding-top: $app-header-height;
+  padding-top: $app-header-height;
+
+  .nav-secondary + & {
+    padding-top: $app-header-height + $app-nav-secondary-height;
+  }
 }
 
 .l-footer {
@@ -52,19 +45,19 @@ html, body {
 
 // height based media query to remove app-frame for shorter view ports
 @media only screen and (max-height: 600px){
-  .l-header {
-    position: relative;
+  .nav-primary, .nav-secondary, .nav-utility {
+    position: static !important;
   }
   .l-body {
-    padding-top: 0;
+    padding-top: 0 !important;
   }
 }
 // width based media query to remove app-frame
 @media only screen and (max-width: 1060px) {
-  .l-header {
-    position: relative;
+  .nav-primary, .nav-secondary, .nav-utility {
+    position: static !important;
   }
   .l-body {
-    padding-top: 0;
+    padding-top: 0 !important;
   }
 }
