--- a/lib/canon/stylesheets/patterns/_nav-primary.scss
+++ b/lib/canon/stylesheets/patterns/_nav-primary.scss
@@ -16,8 +16,8 @@
 
 // main nav
 .nav-primary {
-	height: $app-nav-primary;
-	overflow: hidden;
+	height: $app-nav-primary-height;
+	@include fixed-top($app-nav-utility-height);
 	@include background-image(linear-gradient($white, #ececec));
 	@include filter-gradient($white, #ececec);
 	@include box-shadow(rgba(0, 0, 0, .15) 0 2px 3px 0);
