Add classes for specifying input sizes.

--- a/lib/canon/stylesheets/patterns/_forms.scss
+++ b/lib/canon/stylesheets/patterns/_forms.scss
@@ -57,6 +57,31 @@ select[multiple] {
   height: auto;
 }
 
+/* Input Sizes */
+.input-mini {
+  width: 60px;
+}
+
+.input-small {
+  width: 90px;
+}
+
+.input-medium {
+  width: 150px;
+}
+
+.input-large {
+  width: 210px;
+}
+
+.input-xlarge {
+  width: 270px;
+}
+
+.input-xxlarge {
+  width: 530px;
+}
+
 /* Checkbox and Radio Groups */
 .checkbox,
 .radio {
