--- a/lib/canon/stylesheets/patterns/_forms.scss
+++ b/lib/canon/stylesheets/patterns/_forms.scss
@@ -133,3 +133,19 @@ select[multiple] {
     margin-bottom: 0;
   }
 }
+
+/* Help Text */
+.help-inline,
+.help-block {
+  color: $grey;
+}
+
+.help-inline {
+  display: inline-block;
+  padding-left: 5px;
+}
+
+.help-block {
+  display: block;
+  margin-bottom: 10px;
+}
