--- a/lib/canon/stylesheets/patterns/_forms.scss
+++ b/lib/canon/stylesheets/patterns/_forms.scss
@@ -44,7 +44,7 @@ input[type="file"],
 select,
 textarea {
   margin: 0 0 10px;
-  vertical-align: middle
+  vertical-align: middle;
 }
 
 input[type="text"],
@@ -134,18 +134,56 @@ select[multiple] {
   }
 }
 
-/* Help Text */
+/* Messaging */
 .help-inline,
 .help-block {
   color: $grey;
 }
 
-.help-inline {
+.help-inline,
+.validation-inline {
   display: inline-block;
-  padding-left: 5px;
+  margin-left: 5px;
 }
 
-.help-block {
+.help-block,
+.validation-block {
   display: block;
-  margin-bottom: 10px;
+}
+
+.validation-inline,
+.validation-block {
+  position: relative;
+  padding-left: 20px;
+
+  & > .icon-ok-circle,
+  & > .icon-exclamation-sign {
+    position: absolute;
+    top: 2px;
+    left: 0;
+  }
+}
+
+.control-group.success {
+  .validation-inline,
+  .validation-block {
+    color: $green;
+  }
+}
+
+.control-group.error {
+  input[type="text"],
+  input[type="password"],
+  select,
+  textarea {
+    border-color: $red;
+  }
+
+  label,
+  .help-inline,
+  .help-block,
+  .validation-inline,
+  .validation-block {
+    color: $red;
+  }
 }
