--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -31,6 +31,12 @@ html, body {
 .l-footer {
   background: $grey-darker;
   height: $app-footer-height;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 10;
 }
 
 .l-inner {
@@ -45,7 +51,7 @@ html, body {
 
 // height based media query to remove app-frame for shorter view ports
 @media only screen and (max-height: 600px){
-  .nav-primary, .nav-secondary, .nav-utility {
+  .nav-primary, .nav-secondary, .nav-utility, .l-footer {
     position: static !important;
   }
   .l-body {
@@ -54,7 +60,7 @@ html, body {
 }
 // width based media query to remove app-frame
 @media only screen and (max-width: 1060px) {
-  .nav-primary, .nav-secondary, .nav-utility {
+  .nav-primary, .nav-secondary, .nav-utility, .l-footer {
     position: static !important;
   }
   .l-body {
