--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -43,6 +43,40 @@ html, body {
   @include micro-clearfix();
 }
 
+.sidebar {
+  width: 170px;
+  float: left;
+  margin-right: 40px;
+  margin-top: 22px;
+
+  &.pull-right {
+    float: right;
+    width: 240px;
+    margin-right: 0;
+    padding: 0 0 0 20px;
+  }
+}
+
+.main {
+  background: $white;
+  border: 1px solid #CCC;
+  padding: 30px;
+  margin-top: 23px;
+
+  .sidebar + & {
+    margin-top: 15px;
+    padding: 25px;
+    float: left;
+    width: 768px;
+  }
+
+  .sidebar.pull-right + & {
+    padding: 30px;
+    width: 708px;
+    padding: 30px
+  }
+}
+
 // height based media query to remove app-frame for shorter view ports
 @media only screen and (max-height: 600px){
   .nav-primary, .nav-secondary, .nav-utility, .l-footer {
