--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -26,6 +26,11 @@ html, body {
   .nav-secondary + & {
     padding-top: $app-header-height + $app-nav-secondary-height;
   }
+
+  .l-inner {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
 }
 
 .l-footer {
@@ -46,13 +51,12 @@ html, body {
 .sidebar {
   width: 170px;
   float: left;
-  margin-right: 40px;
-  margin-top: 22px;
+  padding-right: 40px;
+  min-height: 100px;
 
   &.pull-right {
     float: right;
     width: 240px;
-    margin-right: 0;
     padding: 0 0 0 20px;
   }
 }
@@ -61,10 +65,8 @@ html, body {
   background: $white;
   border: 1px solid #CCC;
   padding: 30px;
-  margin-top: 23px;
 
   .sidebar + & {
-    margin-top: 15px;
     padding: 25px;
     float: left;
     width: 768px;
@@ -73,7 +75,6 @@ html, body {
   .sidebar.pull-right + & {
     padding: 30px;
     width: 708px;
-    padding: 30px
   }
 }
 
