Add basic list table.

--- a/lib/canon/stylesheets/canon.scss
+++ b/lib/canon/stylesheets/canon.scss
@@ -10,6 +10,7 @@
 
 @import "patterns/buttons";
 @import "patterns/forms";
+@import "patterns/list-tables";
 @import "patterns/nav-primary";
 @import "patterns/nav-secondary";
 @import "patterns/nav-utility";
