Update padding if nav-secondary exists
I can see a similar approach used to update padding if back-links exist
or content like notifications.

--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -25,6 +25,10 @@ html, body {
 
   .nav-secondary + & {
     padding-top: $app-header-height + $app-nav-secondary-height;
+
+    .main {
+      padding-top: 15px;
+    }
   }
 
   .l-inner {
