--- a/lib/canon/stylesheets/patterns/_list-tables.scss
+++ b/lib/canon/stylesheets/patterns/_list-tables.scss
@@ -75,6 +75,15 @@
     overflow-y: scroll;
     border-top: 1px solid #eee;
   }
+
+  tr {
+    display: block;
+    border-bottom: 1px solid #eee;
+  }
+
+  th, td {
+    border: none;
+  }
 }
 
 .table-sort {
