Fix typo in settings.

--- a/lib/canon/stylesheets/_settings.scss
+++ b/lib/canon/stylesheets/_settings.scss
@@ -5,7 +5,7 @@ $grey-darker: #333;
 $grey-dark: #666;
 $grey: #999;
 $grey-light: #ccc;
-$gray-lightest: #ddd;
+$grey-lightest: #ddd;
 $white: #fff;
 
 $red: #c40022;
