[Feature][46] Add styles for content view.

--- a/lib/canon/stylesheets/canon.scss
+++ b/lib/canon/stylesheets/canon.scss
@@ -9,6 +9,7 @@
 @import "utilities";
 
 @import "patterns/buttons";
+@import "patterns/content-view";
 @import "patterns/forms";
 @import "patterns/list-tables";
 @import "patterns/nav-primary";
